# fastapi-tdd

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml
.github/workflows/: main.yml
project/: .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile.prod  pyproject.toml  requirements-dev.txt  requirements.txt
project/app/: config.py  db.py  main.py  summarizer.py
project/app/api/: crud.py  ping.py  summaries.py
project/db/: Dockerfile
project/migrations/models/: 0_20250519181929_init.py
project/tests/: conftest.py  test_ping.py  test_summaries.py  test_summaries_unit.py
