[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88
